Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116224

Wrong QScrollBar with Qt6.5 + windows vista style in RTL mode

XMLWordPrintable

    • Windows
    • e26a87f1e (dev), b29f12be3 (6.6), 76b3a4cd5 (6.5)

      Looks like 46f98147f4e3a09b32042c0655d5de7285a795e3 ([~santhoshkumar]) introduces a regression for all widgets in RTL mode - e.g. the scrollbars are painted in the wrong order and the scroll direction is wrong:

      This is due to the fact that visualRect() is called twice inside qwindowsvistastyle::subControlRect() in the default branch because the base class (qcommonstyle) already calls visualRect() and it's called again afterwards (line 4511).

       

      I've attached a testcase for a QScrollBar but there should also be other widgets affected.

       

      Found by a user report in the forum: https://forum.qt.io/topic/148177/

        1. main.cpp
          0.6 kB
        2. scrollbar_rtl.png
          scrollbar_rtl.png
          0.7 kB
        For Gerrit Dashboard: QTBUG-116224
        # Subject Branch Project Status CR V

            chehrlic Christian Ehrlicher
            chehrlic Christian Ehrlicher
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes