WindowsVista style: fix subControlRect() in rtl mode

During refactoring of the vista style in
46f98147f4e3a09b32042c0655d5de7285a795e3 a regression slipped into
subControlRect()'s default branch which lead to a double call of
visualRect(). This breaks nearly all subControlRect() calculations in
rtl mode.

Fixes: QTBUG-116224
Change-Id: Ida722e1b6c6a311b27a9b48d1fe1378b47c21cf4
Reviewed-by: Samuel Gaist <samuel.gaist@idiap.ch>
Reviewed-by: Santhosh Kumar <santhosh.kumar.selvaraj@qt.io>
(cherry picked from commit e26a87f1ecc40bc8c6aa5b889fce67410a57a702)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>